src/sass/_instance_list.scss
.instance-list {
  .bulk-actions {
    display: inline-block;
    margin-bottom: -2px;
    margin-right: $sph--large;

    > .bulk-action-frame {
      border: 1px solid $colors--theme--border-high-contrast;

      > .bulk-action {
        border-left: 1px solid rgb(0 0 0 / 10%);
      }
    }
  }

  @media screen and (max-width: $breakpoint-large) {
    .bulk-actions {
      .confirmation-toggle-caption {
        display: none;
      }

      .has-icon > i {
        margin: 0;
      }
    }
  }

  .instance-content {
    padding-bottom: 0;

    @media screen and (max-width: $breakpoint-large) {
      margin-top: 0;
    }

    .p-notification--positive,
    .p-notification--negative {
      margin-bottom: $spv--large;
    }
  }

  .u-row:hover,
  .u-row-selected {
    background-color: $colors--theme--background-hover;
  }

  .instance-actions button {
    margin-bottom: -3px;
  }

  .instance-actions button:hover {
    background-color: $colors--theme--background-active;
  }

  // show actions only on hover if a pointing device is used
  @media screen and (pointer: fine) {
    .instance-actions {
      visibility: hidden;
    }

    .u-row:hover {
      .instance-actions {
        visibility: visible;
      }
    }

    .u-row-selected:hover {
      .instance-actions {
        visibility: hidden;
      }
    }
  }

  .column-selector-toggle {
    float: right;
    margin-bottom: -3.5rem;
  }

  th:last-child {
    display: none;
  }

  // allow text in cluster member chip to identify available space and clip with ellipsis in the chip if necessary
  .cluster-member-rich-chip-position-element {
    display: inherit !important;
  }

  td:last-child {
    padding-bottom: 0;
    padding-right: $sph--large;
  }

  .status-icon {
    margin-left: $spv--x-large;
  }

  th.trailing-status-col,
  td.trailing-status-col {
    padding-left: 0;
    width: 1.5rem;

    .status-icon {
      margin-left: 0;
    }
  }

  .status-abbr {
    font-size: 0.7rem;
    font-weight: bold;
    vertical-align: middle;

    &--running { color: $color-positive; }
    &--stopped { color: $color-mid; }
    &--error   { color: $color-negative; }
    &--frozen  { color: $color-information; }
    &--ready   { color: $color-information; }
  }

  .status-header {
    padding-left: 3.33rem;
    pointer-events: none;

    > * {
      pointer-events: all;
    }
  }

  #instance-table-measure {
    max-height: 1px;
    overflow: hidden;
  }

  .p-panel {
    min-height: auto;
    overflow: hidden;
  }

  .p-meter {
    margin-top: 4px;
  }

  @media screen and (width < 500px) {
    .page-header__search {
      display: none;
    }
  }
}

